test: replace Arrays.asList by List.of